RESOLVED FIXED179653
Give a ServiceWorker WebContentProcess a different display name
https://bugs.webkit.org/show_bug.cgi?id=179653
Summary Give a ServiceWorker WebContentProcess a different display name
Joseph Pecoraro
Reported 2017-11-13 20:22:02 PST
Give a ServiceWorker WebContentProcess a different display name So in Activity Monitor it will show up like "Safari Service Worker" instead of "Safari Web Content".
Attachments
[PATCH] Proposed Fix (9.44 KB, patch)
2017-11-13 20:30 PST, Joseph Pecoraro
beidson: review+
[PATCH] For Landing (9.43 KB, patch)
2017-11-13 23:01 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2017-11-13 20:30:21 PST
Created attachment 326845 [details] [PATCH] Proposed Fix
youenn fablet
Comment 2 2017-11-13 20:31:50 PST
definitely good to have!
Build Bot
Comment 3 2017-11-13 20:32:16 PST
Attachment 326845 [details] did not pass style-queue: ERROR: Source/WebKit/UIProcess/ServiceWorkerProcessProxy.h:36: The parameter name "pool" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/UIProcess/ServiceWorkerProcessProxy.h:36: The parameter name "store" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 4 2017-11-13 22:14:05 PST
Comment on attachment 326845 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=326845&action=review > Source/WebKit/UIProcess/ServiceWorkerProcessProxy.h:36 > + static Ref<ServiceWorkerProcessProxy> create(WebProcessPool& pool, WebsiteDataStore& store); Obey stylebot
Joseph Pecoraro
Comment 5 2017-11-13 23:01:11 PST
Created attachment 326861 [details] [PATCH] For Landing
WebKit Commit Bot
Comment 6 2017-11-13 23:34:09 PST
Comment on attachment 326861 [details] [PATCH] For Landing Clearing flags on attachment: 326861 Committed r224806: <https://trac.webkit.org/changeset/224806>
Radar WebKit Bug Importer
Comment 7 2017-11-15 09:32:26 PST
Note You need to log in before you can comment on or make changes to this bug.