Give a ServiceWorker WebContentProcess a different display name https://bugs.webkit.org/show_bug.cgi?id=179653

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-11-13
Reviewed by Brady Eidson.

Source/WebCore:

* English.lproj/Localizable.strings:

Source/WebKit:

* UIProcess/WebProcessProxy.h:
* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::create):
Call connect after construction so virtual methods will use subclass implementations.

* UIProcess/ServiceWorkerProcessProxy.h:
* UIProcess/ServiceWorkerProcessProxy.cpp:
(WebKit::ServiceWorkerProcessProxy::create):
Copy the pattern from WebProcessProxy to ensure connect() gets called after construction.

(WebKit::ServiceWorkerProcessProxy::getLaunchOptions):
Set a launch option to signal this is a Service Worker process.

* Shared/EntryPointUtilities/mac/XPCService/XPCServiceEntryPoint.mm:
(WebKit::XPCServiceInitializerDelegate::getExtraInitializationData):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::initializeProcessName):
Consume the launch option to configuration the process name.

Canonical link: https://commits.webkit.org/195691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224806 268f45cc-cd09-0410-ab3c-d52691b4dbfc