Source/WebKit/UIProcess/ServiceWorkerProcessProxy.h
@@ -33,16 +33,17 @@ struct WebPreferencesStore;
 
 class ServiceWorkerProcessProxy final : public WebProcessProxy {
 public:
-    static Ref<ServiceWorkerProcessProxy> create(WebProcessPool& pool, WebsiteDataStore& store)
-    {
-        return adoptRef(*new ServiceWorkerProcessProxy { pool, store });
-    }
+    static Ref<ServiceWorkerProcessProxy> create(WebProcessPool&, WebsiteDataStore&);
     ~ServiceWorkerProcessProxy();
 
     void didReceiveAuthenticationChallenge(uint64_t pageID, uint64_t frameID, Ref<AuthenticationChallengeProxy>&&);
 
     void start(const WebPreferencesStore&);
     uint64_t pageID() const { return m_serviceWorkerPageID; }
+
+protected:
+    // ChildProcessProxy
+    void getLaunchOptions(ProcessLauncher::LaunchOptions&) final;
 
 private:
     ServiceWorkerProcessProxy(WebProcessPool&, WebsiteDataStore&);
